<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">In Class 1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="black_label">Black</string>
    <string name="white_label">White</string>
    <string name="red_label">Red</string>
    <string name="green_label">Green</string>
    <string name="blue_label">Blue</string>
    <string name="init_click_count">0</string>
    <string name="click_count_label">No. Button Clicks : </string>

</resources>
